--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,10 +19,14 @@ android {
     signingConfigs {
         release {
             if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
-                storeFile file(project.properties['MYAPP_RELEASE_STORE_FILE'])
-                storePassword project.properties['MYAPP_RELEASE_STORE_PASSWORD']
-                keyAlias project.properties['MYAPP_RELEASE_KEY_ALIAS']
-                keyPassword project.properties['MYAPP_RELEASE_KEY_PASSWORD']
+                storeFile file(project.property('MYAPP_RELEASE_STORE_FILE'))
+                storePassword project.property('MYAPP_RELEASE_STORE_PASSWORD')
+                keyAlias project.property('MYAPP_RELEASE_KEY_ALIAS')
+                keyPassword project.property('MYAPP_RELEASE_KEY_PASSWORD')
+            } else {
+                // Fallback for when properties are not set, e.g., in a CI environment
+                // Or you can throw an error if signing properties are mandatory for release
+                logger.warn("Release signing properties not found. Please ensure MYAPP_RELEASE_STORE_FILE, MYAPP_RELEASE_STORE_PASSWORD, MYAPP_RELEASE_KEY_ALIAS, MYAPP_RELEASE_KEY_PASSWORD are set in your global gradle.properties or environment variables.")
             }
         }
     }
@@ -35,7 +39,11 @@ android {
         }
 
         debug {
-            signingConfig signingConfigs.release
+            // Debug builds typically use a default debug keystore,
+            // or you can define a separate signing config for debug.
+            // Explicitly not using release signing config here.
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
