--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://your-domain.com/your-geocampro-folder
-VITE_DEFAULT_ACCESS_CODE=your_default_access_code
+VITE_API_BASE_URL=https://
+VITE_DEFAULT_ACCESS_CODE=yourcodehere
